--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "devDependencies": {
     "gulp": "latest",
     "gulp-minify-css": "latest",
-    "gulp-sass": "latest",
-    "gulp-slim": "^0.3.0",
-    "gulp-uglify": "latest",
+    "gulp-notify": "latest",
     "gulp-plumber": "latest",
-    "gulp-notify": "latest"
+    "gulp-sass": "latest",
+    "gulp-slim": "latest",
+    "gulp-uglify": "latest"
   }
 }
